--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,13 +10,33 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 	
-	<div class="container mt-3">
-		<div class="card"  th:each="pedido : ${pedidos}">
+	
+	
+	<div class="container">
 		
+		<div class="jumbotron bg-secondary mb-0 ">
+				<h1 class="display-3">Meus Pedidos</h1>
+		</div>
+		
+		
+			<nav class="navbar navbar-expand bg-body-tertiary mb-3">
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup mb-3">
+					<div class="navbar-nav">
+						<a class="nav-link active" aria-current="page" href="#">Todos</a>
+						<a class="nav-link" href="">Aguardando</a>
+						<a class="nav-link" href="">Aprovado</a>
+						<a class="nav-link" href="">Entregue</a>
+					</div>
+				</div>
+				 <form class="d-flex" role="search">
+			     <a href="pedido/formulario"><button class="btn btn-outline-success" type="submit">Novo</button></a>
+			    </form>
+			</nav>
+		
+		<div class="card"  th:each="pedido : ${listaPedidos}">
 			<div class="card-header" th:text="${pedido.nomeProduto}">
 			Nome do produto
 			</div>
-			
 			<div class="card-body">
 				<div class="row">
 					<div class="col-12 col-sm-7 mb-3">
@@ -24,14 +44,11 @@
 						 	<div class="col-md-5 mb-3">Valor: <span th:text="${pedido.valorNegociado}">2.417,08</span></div>
 							<div class="col-md-7 mb-3">Data da entrega: <span th:text="${pedido.dataEntrega}">10/03/2023</span></div>
 					 	</div>
-						
 						<div>Produto</div>
 						<div><input class="form-control" th:value="${pedido.urlProduto}" value="URL do produto"/></div>
-						
 						<div>Descrição</div>
-						<div><textarea class="form-control" th:text="pedido.descricaoProduto">descrição do produto</textarea></div>
+						<div> <textarea class="form-control" th:text="${pedido.descricaoProduto}"></textarea> </div>
 					</div>
-				
 					<div class="col-12 col-sm-5">
 						<div><img class="img-thumbnail" th:src="${pedido.urlImagem}" scr=""/></div>
 					</div>
@@ -39,11 +56,6 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-	
-	
 	
 	
 </body>
