--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,62 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8" />
 <title>Home</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous">
+	
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous">
+	</script>
+	
+	<style>
+	.logo-container{
+		background-color: #47bcff;		
+		color:white;	
+	}
+	.mudi{
+	font-size: 40px;
+	font-family: 'Handlee', cursive;
+	}
+	</style>
 
 </head>
 <body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-	
-	
-	
+
+	<div class="logo-container mb-3 p-3 d-flex justify-content-between">
+		<span class="mudi">mudi</span> <span class="login mt-3">login</span>
+	</div>
+
+
 	<div class="container">
-		
-		<div class="jumbotron bg-secondary mb-0 ">
-				<h1 class="display-3">Meus Pedidos</h1>
+
+		<div class="jumbotron bg-secondary p-3 card">
+			<h1 class="display-3">Meus Pedidos</h1>
 		</div>
-		
-		
-			<nav class="navbar navbar-expand bg-body-tertiary mb-3">
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup mb-3">
-					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="#">Todos</a>
-						<a class="nav-link" href="">Aguardando</a>
-						<a class="nav-link" href="">Aprovado</a>
-						<a class="nav-link" href="">Entregue</a>
-					</div>
+
+
+		<nav class="navbar navbar-expand bg-body-tertiary mb-3 card">
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup mb-3">
+				<div class="navbar-nav m-3">
+					<a class="nav-link active" aria-current="page" href="#">Todos</a> <a
+						class="nav-link" href="">Aguardando</a> <a class="nav-link"
+						href="">Aprovado</a> <a class="nav-link" href="">Entregue</a>
 				</div>
-				 <form class="d-flex" role="search">
-			     <a href="pedido/formulario"><button class="btn btn-outline-success" type="submit">Novo</button></a>
-			    </form>
-			</nav>
-		
-		<div class="card"  th:each="pedido : ${listaPedidos}">
-			<div class="card-header" th:text="${pedido.nomeProduto}">
-			Nome do produto
 			</div>
-			<div class="card-body">
-				<div class="row">
+			<form action="/pedido/formulario" class="d-flex mb-2 mt-1" role="search">
+				<a href="pedido/formula"><button class="btn btn-outline-success"
+						type="submit">Novo</button></a>
+			</form>
+		</nav>
+
+		<div class="card mb-3" th:each="pedido : ${listaPedidos}">
+		
+			<th:block th:switch="${status.name()}">
+				<div th:case"AGUARDANDO" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
+				<div th:case"'APROVADO'" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
+				<div th:case"'ENTREGUE'" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
+			</th:block>
+			
+			<div class="card-body mb-3">
+				<div class="row mb-3">
 					<div class="col-12 col-sm-7 mb-3">
-					 	<div class="row">
-						 	<div class="col-md-5 mb-3">Valor: <span th:text="${pedido.valorNegociado}">2.417,08</span></div>
-							<div class="col-md-7 mb-3">Data da entrega: <span th:text="${pedido.dataEntrega}">10/03/2023</span></div>
-					 	</div>
+						<div class="row">
+							<div class="col-md-5 mb-3">
+								Valor: <span th:text="${pedido.valorNegociado}">2.417,08</span>
+							</div>
+							<div class="col-md-7 mb-3">
+								Data da entrega: <span th:text="${pedido.dataEntrega}">10/03/2023</span>
+							</div>
+						</div>
 						<div>Produto</div>
-						<div><input class="form-control" th:value="${pedido.urlProduto}" value="URL do produto"/></div>
+						<div>
+							<input class="form-control" th:value="${pedido.urlProduto}"
+								value="URL do produto" />
+						</div>
 						<div>Descrição</div>
-						<div> <textarea class="form-control" th:text="${pedido.descricaoProduto}"></textarea> </div>
+						<div>
+							<textarea class="form-control"
+								th:text="${pedido.descricaoProduto}"></textarea>
+						</div>
 					</div>
 					<div class="col-12 col-sm-5">
-						<div><img class="img-thumbnail" th:src="${pedido.urlImagem}" scr=""/></div>
+						<div>
+							<img class="img-thumbnail" th:src="${pedido.urlImagem}" scr="" />
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	
+
+
 </body>
 </html>
