--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,9 +45,10 @@
 		<nav class="navbar navbar-expand bg-body-tertiary mb-3 card">
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup mb-3">
 				<div class="navbar-nav m-3">
-					<a class="nav-link active" aria-current="page" href="#">Todos</a> <a
-						class="nav-link" href="">Aguardando</a> <a class="nav-link"
-						href="">Aprovado</a> <a class="nav-link" href="">Entregue</a>
+					<a th:classappend="${status} == null ? 'active'" class="nav-link" aria-current="page" href="/home">Todos</a> 
+					<a th:classappend="${status} == 'aguardando' ? 'active'" class="nav-link" href="/home/aguardando">Aguardando</a> 
+					<a th:classappend="${status} == 'aprovado' ? 'active'" class="nav-link" href="/home/aprovado">Aprovado</a> 
+					<a th:classappend="${status} == 'entregue' ? 'active'" class="nav-link" href="/home/entregue">Entregue</a>
 				</div>
 			</div>
 			<form action="/pedido/formulario" class="d-flex mb-2 mt-1" role="search">
@@ -56,12 +57,12 @@
 			</form>
 		</nav>
 
-		<div class="card mb-3" th:each="pedido : ${listaPedidos}">
+		<div class="card mb-3" th:each="pedido : ${listaPedidos}">	
 		
-			<th:block th:switch="${status.name()}">
-				<div th:case"AGUARDANDO" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
-				<div th:case"'APROVADO'" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
-				<div th:case"'ENTREGUE'" th:text="${pedido.nomeProduto}" class="card-header bg-success mb-3" >Nome do produto</div>
+			<th:block th:switch="${#strings.toString(pedido.status)}">
+				<div th:case= "'AGUARDANDO'" th:text="${pedido.nomeProduto}" class="card-header alert alert-warning" role="alert">Nome do produto</div>
+				<div th:case= "'APROVADO'" th:text="${pedido.nomeProduto}" class="card-header alert alert-success" role="alert">Nome do produto</div>
+				<div th:case= "'ENTREGUE'" th:text="${pedido.nomeProduto}" class="card-header alert-dark" role="alert">Nome do produto</div>
 			</th:block>
 			
 			<div class="card-body mb-3">
@@ -69,10 +70,10 @@
 					<div class="col-12 col-sm-7 mb-3">
 						<div class="row">
 							<div class="col-md-5 mb-3">
-								Valor: <span th:text="${pedido.valorNegociado}">2.417,08</span>
+								Valor: <span th:text="${#numbers.formatCurrency(pedido.valorNegociado)}"></span>
 							</div>
 							<div class="col-md-7 mb-3">
-								Data da entrega: <span th:text="${pedido.dataEntrega}">10/03/2023</span>
+								Data da entrega: <span th:text="${#temporals.format(pedido.dataEntrega, 'dd/MM/yyyy')}">10/03/2023</span>
 							</div>
 						</div>
 						<div>Produto</div>
