--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,6 +24,9 @@
 	font-size: 40px;
 	font-family: 'Handlee', cursive;
 	}
+	.login{
+	text-decoration: none;
+	}
 	</style>
 
 </head>
@@ -31,7 +34,12 @@
 
 
 	<div class="logo-container mb-3 p-3 d-flex justify-content-between">
-		<span class="mudi">mudi</span> <span class="login mt-3">login</span>
+		<span class="mudi">mudi</span> 
+		<span class="login mt-3">
+			<a class="text-light" sec:authorize="!isAuthenticated()" href="/login">login</a> 
+			<a onclick="document.querySelector('#form-login').submit()" class="text-light" sec:authorize="isAuthenticated()" href="#">logout</a> 
+			<form id="form-login" th:action="@{/logout}" method="post"/>
+		</span>
 	</div>
 
 
